<resources>
    <string name="app_name">ASELSAN</string>
    <string name="meba_electronic">MEBA ELECTRONIC</string>
    <string name="gaziantep_in_turkey">GAZIANTEP IN TURKEY</string>
    <string name="www_mebaelektronik_com_tr">www.mebaelektronik.com.tr</string>
    <string name="aselsannet_official_distributor">ASELSANNET OFFICIAL DISTRIBUTOR</string>
    <string name="developed_by_ridvan_akir">DEVELOPED BY RIDVAN ÇAKIR</string>
</resources>
