<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main_id"
    android:background="@drawable/bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/meba_electronic"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/gaziantep_in_turkey"
            android:textColor="#FFFFFF"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/meba_electronic"
            app:srcCompat="@drawable/ic_map_marked_alt"
            tools:srcCompat="@drawable/ic_map_marked_alt" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aselsannet_official_distributor"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/www_mebaelektronik_com_tr"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/developed_by_ridvan_akir"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

</RelativeLayout>
